--- a/test/ingress/ingress.yaml
+++ b/test/ingress/ingress.yaml
@@ -6,14 +6,14 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
-  ingressClassName: test-nginx
+  ingressClassName: nginx
   rules:
     - http:
         paths:
           - path: /gateway(/|$)(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: gateway
+                name: test-gateway-svc
                 port:
                   number: 80
