Refactor: ingress class, service name을 k8s DNS 규칙에 따라 변경

--- a/test/service/service.yaml
+++ b/test/service/service.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-gateway-test
+  name: gateway-test
   namespace: test-ns
 spec:
   selector:
